force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__ContactPointId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactPointId__c</fullName>
    <label>Contact Point</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactPointId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>