force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__DevicePostalCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__DevicePostalCode__c</fullName>
    <label>Device Postal Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DevicePostalCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>