force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__EngagementActionReasonText__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementActionReasonText__c</fullName>
    <label>Engagement Action Reason</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementActionReasonText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>