force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__rel_1702009527609_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009527609_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KnowledgeArticleEngagement_AccountCo_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>KnowledgeArticleEngagement_AccountCo_rel</relationshipLabel>
    <relationshipName>rel_1702009527609_end</relationshipName>
    <type>Lookup</type>
</CustomField>