force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__UsedForGrounding__c.field-meta.xml
<CustomField>
    <fullName>ssot__UsedForGrounding__c</fullName>
    <label>Used For Grounding</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UsedForGrounding</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>