force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__UserAgentText__c.field-meta.xml
<CustomField>
    <fullName>ssot__UserAgentText__c</fullName>
    <label>User Agent</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UserAgentText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>