force-app/main/default/objects/ssot__KnowledgeArticleEngagement__dlm/fields/ssot__Websiteid__c.field-meta.xml
<CustomField>
    <fullName>ssot__Websiteid__c</fullName>
    <label>Website</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Websiteid</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>